[package]
name = "advent_of_code_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_1_sonar_sweep"

[[bin]]
name = "day_1_sonar_sweep_sliding_window"

[[bin]]
name = "day_2_dive"

[[bin]]
name = "day_2_dive_and_aim"


[dependencies]

